manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starai-web
  namespace: starai-demo
spec:
  type: ClusterIP
  selector:
    app: starai-web
  ports:
  - name: https
    port: 443
    targetPort: 8443
